Source/WebKit/WebProcess/WebProcess.h
@@ -248,6 +248,8 @@ public:
 #if ENABLE(GPU_PROCESS)
     GPUProcessConnection& ensureGPUProcessConnection();
     GPUProcessConnection* existingGPUProcessConnection() { return m_gpuProcessConnection.get(); }
+    // Returns timeout duration for GPU process connections. Thread-safe.
+    Seconds gpuProcessTimeoutDuration() const;
     void gpuProcessConnectionClosed();
     void gpuProcessConnectionDidBecomeUnresponsive();
 
@@ -382,6 +384,8 @@ public:
 #if PLATFORM(MAC)
     void updatePageScreenProperties();
 #endif
+
+    void setChildProcessDebuggabilityEnabled(bool);
 
 #if ENABLE(GPU_PROCESS)
     void setUseGPUProcessForCanvasRendering(bool);
@@ -804,6 +808,8 @@ private:
     std::optional<audit_token_t> m_auditTokenForSelf;
     RetainPtr<NSMutableDictionary> m_accessibilityRemoteFrameTokenCache;
 #endif
+
+    bool m_childProcessDebuggabilityEnabled { false };
 
 #if ENABLE(GPU_PROCESS)
     bool m_useGPUProcessForCanvasRendering { false };
